Fix button text color on mobile

--- a/components/button/button.module.css
+++ b/components/button/button.module.css
@@ -1,5 +1,6 @@
 .button {
   padding: 8px 24px;
+  color: inherit;
   cursor: pointer;
   background: var(--background-secondary);
   border: 0;
